JSON data storage

--- a/statistics.html
+++ b/statistics.html
@@ -30,7 +30,7 @@
     </nav>
 
     <main>
-<!--<form id="formID">
+<form id="formID">
 
     <label for="foodName">foodName</label>
     <input type="text" name="foodName" id="foodName">
@@ -67,7 +67,7 @@
 
 </table>
 
-    </main> -->
+    </main>
     <footer>
         <div>
             <p> &copy; Omar darweesh   <script>document.write(new Date().getFullYear())</script> </p>
