--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Restaurant</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="styling.css">
+   <link rel="stylesheet" href="indexStyle.css">
 </head>
 <body>
 
@@ -30,7 +30,7 @@
     </nav>
 
     <main>
-<!--<form id="formID">
+<form id="formID">
 
     <label for="foodName">foodName</label>
     <input type="text" name="foodName" id="foodName">
@@ -67,7 +67,7 @@
 
 </table>
 
-    </main> -->
+    </main>
     <footer>
         <div>
             <p> &copy; Omar darweesh   <script>document.write(new Date().getFullYear())</script> </p>
