--- a/statistics.html
+++ b/statistics.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Restaurant</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="styling.css">
+   <link rel="stylesheet" href="stat.css">
 </head>
 <body>
-
+<header>
     <nav>
     <h1>
         Restaurant menu
@@ -17,7 +17,7 @@
     <div class="right">
 
         <a href="index.html">home</a>
-        <a href="statistics.html">statistics</a>
+        <!-- <a href="statistics.html">statistics</a> -->
 
 
 
@@ -28,9 +28,11 @@
 
 
     </nav>
+   </header>
+
 
     <main>
-<form id="formID">
+<!-- <form id="formID">
 
     <label for="foodName">foodName</label>
     <input type="text" name="foodName" id="foodName">
@@ -49,7 +51,7 @@
    <input type="text" name="price" id="price">
 
    <input type="submit" value="submit">
-</form>
+</form> -->
 
 
 
@@ -76,7 +78,9 @@
     </footer>
 
 
-    <script src="./constructor .js"></script>
+    
+    <script src="./statistics.js"></script>
+
 </body>
 </html>
 
